# codegen

./: .gitignore  Justfile  README.md  dev.ipynb  requirements.txt
openapi-ts/: Justfile  README.md  demo.ipynb  pyproject.toml
openapi-ts/src/openapi_ts/: __init__.py  main.py
py-jaxtyping/: README.md  demo.ipynb  pyproject.toml
py-jaxtyping/src/py_jaxtyping/: __init__.py  main.py  schemas.py
quicktype-ts/: README.md  demo.ipynb  pyproject.toml
quicktype-ts/src/quicktype_ts/: __init__.py  main.py
templang/: README.md  demo.ipynb  example.py  example.ts  nested.py  pyproject.toml
templang/src/templang/: __init__.py  main.py
verify-import/: README.md  pyproject.toml
verify-import/src/verify_import/: __init__.py  __init__.pyi  cli.py  main.py
