[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verify-import"
version = "0.1.1"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Simple tool to verify all submodules import without error"
dependencies = [
  "lazy-loader"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/marciclabas/codegen.git"

[project.scripts]
verify-import = "verify_import.cli:main"